# wasm-float-transpiler

./: .gitignore  Cargo.toml  README.md  test-contract.sh
backends/apfloat/: Cargo.toml
backends/apfloat/src/: lib.rs  ops.rs
backends/apfloat/tests/: wasm_spec.rs
backends/bs/: Cargo.toml
backends/bs/src/: ops.rs
backends/bs/tests/: wasm_spec.rs
backends/panic/: Cargo.toml
backends/panic/src/: lib.rs
backends/softfp/: Cargo.toml
backends/softfp/src/: lib.rs  ops.rs
backends/softfp/tests/: wasm_spec.rs
cw-float/: Cargo.toml  README.md
cw-float/src/: lib.rs
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
examples/cw-float/: Cargo.toml
examples/cw-float/src/: contract.rs  lib.rs  msg.rs
util/: Cargo.toml
util/src/: lib.rs  test.rs
util/tests/: differential_fuzzing.rs  wasm_spec.rs
wasm-float-runtime/: Cargo.toml
wasm-float-runtime/src/: float_middleware.rs  main.rs  util.rs
wasm-float-runtime/test-wasm/: Cargo.toml
wasm-float-transpiler/: Cargo.toml
wasm-float-transpiler/src/: gatekeeper.rs  main.rs  math.rs  merge.rs  print_middleware.rs  replace.rs  translate.rs  traversal.rs  wast.rs
wasm-soft-floats/: Cargo.toml
wasm-soft-floats/src/: berkeley.rs  float.rs  lib.rs
wasm-soft-floats/src/backend/: mod.rs  rustc_apfloat.rs  softfp.rs
wasm-soft-floats/tests/: differential_fuzzing.rs  wasm_spec.rs
wasm-test/: Cargo.toml  README.md
wasm-test/src/: lib.rs
