[workspace]

members = [
    "wasm-float-runtime",
    "wasm-float-transpiler",
    "wasm-soft-floats",
    "wasm-test",
    "test-contract",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
