[workspace]
members = ["basic", "cw-float"]

[workspace.package]
authors = ["Christoph Otter <chipshort@protonmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chipshort/wasm-float-transpiler"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
