[package]
name = "wasm-float-transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.3"
wasmer-types = "2.3"
wasmer-compiler-cranelift = "2.3"
wasmer-compiler-singlepass = "2.3"
wasmer-engine-universal = "2.3"
loupe = "0.1.3"
simple-soft-float = "0.1.0"

[dev-dependencies]
wast = "38.0"
anyhow = "1"
wasmer-wast = "2.3"
