[package]
name = "wasm-float-transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walrus = { path = "../../walrus", features = ["parallel"] }
rayon = "1.5"
anyhow = "1"
const_format = { version = "0.2.30", features = ["rust_1_51"] }
