[package]
name = "wasm-soft-floats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["softfp"]
default = ["rustc_apfloat"]
rustc_apfloat = ["dep:rustc_apfloat"]
softfp = ["dep:softfp"]

[dependencies]
# Pinning version here to avoid possible changes in determinism
softfp = { version = "=0.1.0", default-features = false, optional = true }
rustc_apfloat = { version = "=0.1.3", optional = true }
softfloat-c = { git = "https://github.com/chipshort/softfloat-c.git", rev = "16f70b82719a395a0abc0859a6f585f09f0af7a0", optional = true }

[dev-dependencies]
quickcheck = "1.0"
