[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Otter <chris@confio.gmbh>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# wasm-bindgen = "0.2.83"
# [features]
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
# # use library feature to disable all instantiate/execute/query exports
# library = []

# [dependencies]
# cosmwasm-schema = "1.1"
# cosmwasm-std = { version = "1.1", features = ["staking"] }
# cosmwasm-storage = "1.1"
# cw-storage-plus = "0.15"
# cw-utils = "0.15"
# cw2 = "0.15"
# schemars = "0.8"
# semver = "1"
# serde = { version = "1", default-features = false, features = ["derive"] }
# thiserror = "1"

# [dev-dependencies]
# anyhow = "1"
# cw-multi-test = "0.16"
# cw20 = "0.16"
# test-case = "2.2.1"
